@@ -1,5 +1,10 @@
 changes since last release
 
+  -- fixed an issue that resulted in the custom knapsack distribution
+     map not generating a useful distribution map for the reactions.
+     Also, fixed an edge case where this custom distribution map could
+     cause a numerical overflow and code crash. (#382)
+
 # 18.11
 
   -- we've restructured the CTU solver to no longer use a slab
